# ecu-assistant

./: .env.example  .gitignore  ECU-800_Series_Base.md  Makefile  README.md  ai-engineering-coding-challenge.md  gistfile1.txt  gistfile3.txt  pyproject.toml  test-questions.csv
.github/workflows/: ci.yml
scripts/: smoke_wheel_pyfunc.py
src/ecu_assistant/: __init__.py  cli.py  config.py  reproducibility.py
src/ecu_assistant/agent/: __init__.py  confidence.py  graph.py  nodes.py  prompts.py  state.py
src/ecu_assistant/data/: __init__.py  loaders.py  schemas.py
src/ecu_assistant/data/documents/: ECU-700_Series_Manual.md  ECU-800_Series_Base.md  ECU-800_Series_Plus.md
src/ecu_assistant/evaluation/: __init__.py  golden_questions.csv  golden_set.py  metrics.py  run_eval.py
src/ecu_assistant/mlflow_model/: __init__.py  log_model.py  pyfunc_model.py
src/ecu_assistant/retrieval/: __init__.py  chunking.py  embeddings.py  retriever.py  vector_store.py
tests/: conftest.py  test_agent_answers.py  test_confidence.py  test_evaluation.py  test_mlflow_predict.py  test_reproducibility.py  test_retrieval.py  test_routing.py
