[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecu-assistant"
version = "0.4.0"
description = "LangGraph RAG assistant for ME ECU engineering specifications"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "langchain-core>=0.3,<2",
  "langgraph>=0.2,<2",
  "numpy>=1.26,<3",
  "pandas>=2.0,<3",
]

[project.optional-dependencies]
openai = [
  "langchain-openai>=0.3,<2",
]
anthropic = [
  "langchain-anthropic>=0.3,<2",
]
ollama = [
  "langchain-ollama>=0.2,<2",
]
mlflow = [
  "mlflow>=2.13,<4",
]
all = [
  "langchain-anthropic>=0.3,<2",
  "langchain-ollama>=0.2,<2",
  "langchain-openai>=0.3,<2",
  "mlflow>=2.13,<4",
]
dev = [
  "build>=1.2,<2",
  "mlflow>=2.13,<4",
  "pylint>=3.2,<4",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
]

[project.scripts]
ecu-agent = "ecu_assistant.cli:main"
log-model = "ecu_assistant.mlflow_model.log_model:main"
evaluate-mlflow = "ecu_assistant.evaluation.run_eval:mlflow_main"
evaluate-local = "ecu_assistant.evaluation.run_eval:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ecu_assistant = [
  "data/documents/*.md",
  "evaluation/*.csv",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["ecu_assistant"]

[tool.pylint.main]
py-version = "3.11"
jobs = 1
ignore-paths = ["tests"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "duplicate-code",
  "fixme",
  "import-error",
  "import-outside-toplevel",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-return-statements",
  "too-few-public-methods",
  "trailing-newlines",
]
